--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/linLayout"
+    android:id="@+id/frameLayout"
+    android:layout_gravity="center"
     tools:context=".MainActivity">
 
     <ImageView
